superbalist.css
*, *::before, *::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    }
    
    html {
        scroll-behavior: smooth;
    }
    :root {
        --text-color: #202020;
        --hover: #4d30ab;
        --green: #407c51
    }
    
    h1, h2, h3, h4, 
    h5, h6, p, a, i {
        color: var(--text-color);
        font-family: Nunito, sans-serif;
    }
    
    /***********Styling for body. Display flex used to ensure footer stays at the bottom**********/
    body {
        display: flex;
        flex-direction: column;
        background-color: #f7f7f5;
        margin: 4.5em 4em 0 4em;
    }
    
    /******************************Styling for header & navbar*************************************/
    .nav-bar {
        position: fixed;
        top: 0;
        left: 0;
        width: 100%;
        height: 80px;
        z-index: 999;
        display: flex;
        justify-content: space-between;
        align-items: center;
        list-style: none;
        background-color: #f7f7f5;
        padding: 0 2em;
        box-shadow: 0.5px 0.5px 1px #727272;
    }
    .logo img {height: 50px;}
    .menu {display: flex;}
    .menu li {padding-left: 1em;}
    .menu li a {
        font-size: 1.125rem;
        font-weight: 600;
        display: inline-block;
        text-decoration: none;
        color: var(--text-color);
        text-align: center;
        transition: all 0.3s;
        position: relative;
        text-transform: uppercase;
    }
    
    .menu li a:hover {color: var(--hover);}
    .open-menu , .close-menu {
        position: absolute;
        color: var(--color1);
        cursor: pointer;
        font-size: 1.5rem;
        display: none;
    }
    .open-menu {
        top: 50%;
        right: 20px;
        transform: translateY(-50%);
    }
    .close-menu {
        top: 20px;
        right: 20px;
    }
    #check {display: none;}
    
/********************************Styling for title section*************************************/
.cs-title .img {
    max-width: 400px;
    margin: auto;
}

.cs-title img {
    max-width: 100%;
}

.note {
    font-size: 0.875rem;
    text-align: center;
    margin-top: 1em;
}

h1 {
    font-size: 2em;
    text-align: center;
    margin-top: 0.5em;
}

/********************************Styling for cs-body section*************************************/
.cs-body {
    margin-top: 2em;
}

.container {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(160px, 350px));
    justify-content: center;
    gap: 16px;
    border: 2px solid red;
    margin-top: 1em;
}

.media {
    max-width: 400px;
    padding: 2em;
    background-color: #fff;
    border-radius: 5px;
    box-shadow: 0.1px 0.1px 4px 0px #727272;
    display: flex;
    justify-content: center;
}

.media img {
    max-width: 100%;
}

.content {
    max-width: 400px;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.content h2 {
    font-size: 2rem;
    color: var(--green);
}

.content p {
    font-size: 1.125rem;
}

.content span {
    background-color: #7bcb92;
    width: fit-content;
}

/*********************Styling for intro section*********************/
#video h3 {
    font-size: 3rem;
    color: var(--green);
}

.superbalist-video {
    margin: auto;
}

.superbalist-video video {
    border-radius: 5px;
}

/*************Styling for part where I found the shoe**************/
#found-shoe img {
    border-radius: 5px;
}

#found-shoe {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#found-shoe .content, 
#how-might-we .content,
#user-flow .content {
    max-width: 700px;
    margin: auto;
}

#found-shoe .media,
#how-might-we .media {
    max-width: 620px;
    padding: 0;
    margin-top: 1em;
}

#how-might-we h4 {
    font-size: 2rem;
    color: var(--green);
    margin-bottom: 0.5em;
}

#how-might-we,
#user-flow {
    display: flex;
    flex-direction: column;
}

#user-flow h4 {
    font-size: 2rem;
    color: var(--green);
}

/*********************Styling for how might we section*********************/
/******************Styling for taking it a step further section******************/
.card-container {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(160px, 350px));
    justify-content: center;
    gap: 16px;
}

.card-container.one {
    margin-top: 1em;
}

.step-further {
    margin-bottom: 0.5em;
}
.current-flow {
    margin-top: 0.5em;
}

.card{
    box-shadow: 0.5px 0.5px 4px 0px #727272;
    padding: 2em;
    background-color: #fff;
    border-radius: 5px;
    display: grid;
    justify-items: center;
    align-items: start;
}

.card img {
    max-width: 250px;
}

.card .text.two {
    width: 240px;
}
#text-two {
    width: 225px;
}
.card .text.one {
    width: 250px;
}

.card p {
    font-size: 1.125rem;
    font-weight: bold;
    color: var(--green);
    text-align: left;
}

.card-img img {
    max-height: 500px;
}






    








/***********************************Styling for footer******************************************/
footer {
    text-align: center;
    display: flex;
    gap: 16px;
    flex-direction: column;
    justify-content: center;
    margin: 1em 0;
}

.footer {
    height: 80px;
    margin-top: 2em;
}

.footer hr {
    color: #20202021;
}

.socials a {
    text-decoration: none;
}

.socials a i {
    font-size: 2rem;
    transition: all 0.3s;
    margin-right: 0.5em;
}

.socials a i:hover {
    color: var(--hover);
}

/*********************************Syling for media query*************************************/
@media(max-width: 430px) {
    body {
        margin: 4.5em 1em 0 1em;
    }
    
    .menu {
        flex-direction: column;
        align-items: start;
        justify-content: center;
        width: fit-content;
        height: 35%;
        padding: 0 2em;
        position: fixed;
        top: 0;
        right: -100%;
        z-index: 100;
        background-color: #f7f7f5;
        transition: all 0.3s;
    }
    .menu li {
        margin-top: 40px;
        text-align: start;
    }
    .open-menu , .close-menu {
        display: block;
    }
    #check:checked ~ .menu {right: 0;}
}

